feat: added noscroll & keyboard-access

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,6 @@
   --max-width: 65rem;
   --main-padding: 1.25rem 4vw;
   --button-size: 3rem;
-  --header-height: 4.125rem;
   --sidebar-width: calc(100vw - 60vw);
   --close-btn-position: 2rem;
   --animation-duration: 0.3s;
@@ -17,6 +16,14 @@
 html {
   font-size: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+html.noScroll {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 *,
@@ -87,17 +94,12 @@ a:focus {
   min-height: 100vh;
 }
 
-.introSection {
-  margin-top: var(--header-height);
-}
-
 /* Header */
 
 .header {
-  position: fixed;
+  position: sticky;
   width: 100%;
   top: 0;
-  height: var(--header-height);
   background: var(--nav-bg);
   padding: var(--main-padding);
 }
@@ -140,12 +142,17 @@ a:focus {
 .overlay {
   width: 100vw;
   display: none;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity var(--animation-duration) var(--timing-function);
   background: var(--overlay-bg);
   z-index: 10;
 }
 
 .overlay.showOverlay {
   display: block;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .sidebar {
